--- a/mylist.html
+++ b/mylist.html
@@ -134,7 +134,7 @@
       let inner_html = '';
     	inner_html += '<tr>';
    		inner_html += '<td>'+data.playlist_MemID+'</td>';
-   		inner_html += '<td><a href="player.html" onclick= "playsong('+data.playlist_SongID+')">'+data.playlist_SongID+'</a></td>';
+   		inner_html += '<td><a href="player.html?id='+data.playlist_SongID+'" onclick= "playsong('+data.playlist_SongID+')">Song'+data.playlist_SongID+'</a></td>';
  		  inner_html += '<td><input id="remove_bt" type="button" value="Remove" onclick="deleteSong('+data.playlist_SongID+',this)"></td>';
  		  inner_html += '</tr>';
  		
